--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "cli": "node src/cli.js",
-    "test": "MOCHA_FILE=junit/test-results.xml nyc cover -- _mocha --recursive",
+    "test": "mocha",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "install": "node node_modules/pegjs/bin/pegjs src/parser/plantuml.pegjs"
@@ -23,7 +23,7 @@
   "keywords": [
     "plantuml",
     "puml",
-    "code",
+    "json",
     "pegjs",
     "generator",
     "uml",
@@ -52,7 +52,9 @@
     "eslint-plugin-chai-expect": "^2.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-mocha": "^8.0.0",
-    "nyc": "^15.1.0",
-    "sinon": "^9.2.4"
+    "istanbul": "^0.4.5",
+    "sinon": "^9.2.4",
+    "mocha": "^8.3.0",
+    "nyc": "^15.1.0"
   }
 }
