--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "puml2json",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "PlantUML to json generator",
-  "main": "index.js",
+  "main": "./src/index.js",
   "bin": {
     "puml2json": "./bin/puml2json"
   },
