--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "puml2json",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "description": "PlantUML to json generator",
   "main": "./src/index.js",
   "bin": {
@@ -11,7 +11,8 @@
     "test": "mocha",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "install": "pegjs src/parser/plantuml.pegjs"
+    "build": "pegjs src/parser/plantuml.pegjs",
+    "install": "build"
   },
   "engines": {
     "node": ">=12.0.0"
